# ScuftC

./: .gitignore  CMakeLists.txt  README.md
demo/: BasicTest.scft  ErrorTest.scft  FunctionTest.scft  TypeTestDemo.scft  VarDeclTest.scft  build.scft
demo/HelloWorld/: hello_world.scft
include/: analysis.hpp  ast.hpp  ast_printer.hpp  diagnostics.hpp  flags.hpp  lexer.hpp  parser.hpp  sym_tab.hpp  utils.hpp
lib/: lang.scft
log/: feature_log  todos  type_checking_idea
src/: analysis.cpp  ast.cpp  ast_printer.cpp  diagnostics.cpp  flags.cpp  lexer.cpp  main.cpp  parser.cpp  sym_tab.cpp
